--- a/src/ComponentsCSS/Order.css
+++ b/src/ComponentsCSS/Order.css
@@ -11,21 +11,19 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    background-color: #1c4dae;
     width: 50%;
 }
 
 .id-name-surname-container{
     display: flex;
     flex-direction: row;
-    background-color: #f5720d;
     width: 50%;
+    margin-bottom: 0.5em;
 }
 
 .id-icon {
     margin-top: 0.25em;
-    background-color: #f50dd6;
-    width: 4em;
+    width: 4vw;
 }
 
 .id-name-surname {
@@ -39,14 +37,49 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    background-color: #0df556;
 }
 
 .loc-icon {
-    background-color: #f50dd6;
-    width: 4em;
+    width: 4vw;
 }
 
 .location {
     margin-left: 0.65em;
 }
+
+.order-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 50%;
+}
+
+.total-container {
+    display: flex;
+    flex-direction: row;
+    margin-bottom: 0.5em;
+}
+
+.status-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.total-icon {
+    width: 4vw;
+}
+
+.total-ammount {
+    margin-top: 0.3em;
+    margin-left: 0.65em;
+}
+
+.status-icon {
+    width: 4vw;
+}
+
+.status {
+    margin-top: 0.3em;
+    margin-left: 0.65em;
+}
+
