--- a/src/ComponentsCSS/StatusOption.css
+++ b/src/ComponentsCSS/StatusOption.css
@@ -10,7 +10,7 @@
 }
 
 .status-shipped {
-    background-color: #63E6BE;
+    background-color: #282c34;
     width: 10vw;
     height: 100%;
     border-radius: 10px;
